# crewai

./: .gitignore  requirements.txt
crewaidemo/crewdemo1/: README.md  pyproject.toml  report.md  study_notes.md
crewaidemo/crewdemo1/src/: logs.txt
crewaidemo/crewdemo1/src/DailyTasks/: logstime.ipynb
crewaidemo/crewdemo1/src/crewdemo1/: crew.py  crewtask.ipynb  main.py
crewaidemo/crewdemo1/src/crewdemo1/config/: agents.yaml  tasks.yaml
gradiodemo/: 10_gr_lg_ui.py  1_gr_intro.py  2_gr_chkboxes.py  3_gr_radiobutns.py  4_gr_imgupload.py  5_gr_outputonly.py  6_gr_blocks.py  7_gr_btnevents.py  8_gr_btneventdecrtr.py  9_gr_multistepflow.py  gradio.txt
