[project]
name = "crewdemo1"
version = "0.1.0"
description = "crewdemo1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
crewdemo1 = "crewdemo1.main:run"
run_crew = "crewdemo1.main:run"
train = "crewdemo1.main:train"
replay = "crewdemo1.main:replay"
test = "crewdemo1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
